src/objects/ACCL__Account_Extension__c.object
<CustomObject>
    <description>Attributes associated with an customer.</description>
    <fields>
        <fullName>ACCL__Account__c</fullName>
        <description>Reference to the customer</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Extensions</relationshipLabel>
        <relationshipName>Account_Extensions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Bill_To_Role_Valid_From__c</fullName>
        <label>Bill To Role Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Bill_To_Role_Valid_Thru__c</fullName>
        <label>Bill To Role Valid Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Broker_Role_Valid_From__c</fullName>
        <label>Broker Role Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Broker_Role_Valid_Thru__c</fullName>
        <label>Broker Role Valid Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Class_Of_Trade__c</fullName>
        <description>Reference to the account the company segment belongs to.</description>
        <label>Class Of Trade</label>
        <picklist>
            <picklistValues>
                <fullName>SM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DrugStores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DiscountStores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ConvenienceStores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CategorySpecialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hypermarket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grocery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kiosk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GasStation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Company_Type__c</fullName>
        <description>Is used to segment accounts for promotions.</description>
        <label>Company Type</label>
        <picklist>
            <picklistValues>
                <fullName>Retailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OnTrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ThirdParty</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Customer_Id__c</fullName>
        <description>Account Role Id for customer</description>
        <label>Customer Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Customer_Role_Number__c</fullName>
        <label>Customer Role Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Customer_Role_Price_List_type__c</fullName>
        <label>Customer Role Price List type</label>
        <picklist>
            <picklistValues>
                <fullName>Wholesaler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NotRelevant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Customer_Role_Price_Type__c</fullName>
        <label>Customer Role Price Type</label>
        <picklist>
            <picklistValues>
                <fullName>factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NotRelevant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Customer_Role_Valid_From__c</fullName>
        <label>Customer Role Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Customer_Role_Valid_Thru__c</fullName>
        <label>Customer Role Valid Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Date_Closure__c</fullName>
        <description>Date the company closed.</description>
        <label>Date Closure</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Delivery_Role_Modify_Preset_Quantity__c</fullName>
        <description>Specifies in which way quantity modifications of preset quantities of delivery documents can be modified</description>
        <label>Delivery Role Modify Preset Quantity</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only Decrease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Delivery_Role_Number_Of_Printouts__c</fullName>
        <label>Delivery Role Number Of Printouts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Delivery_Role_Valid_From__c</fullName>
        <label>Delivery Role Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Delivery_Role_Valid_Thru__c</fullName>
        <label>Delivery Role Valid Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Fund_Role_Valid_From__c</fullName>
        <description>From this date on the fund role is valid.</description>
        <label>Fund Role Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Fund_Role_Valid_Thru__c</fullName>
        <description>Fund Role status valid thru date.</description>
        <label>Fund Role Valid Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Match_Code__c</fullName>
        <description>Matchcode of the business partner. Usually a concatenation of several encoded account attributes, e.g. Name + State + City -&gt; KROGER.GA.ATL</description>
        <label>Match Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__Order_Role_Order_Template_Blocked__c</fullName>
        <description>By this temporary order template blocking it is achieved, that this customer can not order them as long this flag is set.</description>
        <label>Order Role Order Template Blocked</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Order_Role_Orderer_Type__c</fullName>
        <description>Type of the ordering business partner: direct, indirect.</description>
        <label>Order Role Orderer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back-end replenishment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Order_Role_Valid_From__c</fullName>
        <label>Order Role Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Order_Role_Valid_Thru__c</fullName>
        <label>Order Role Valid Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Org_Level__c</fullName>
        <description>Customer organization level classification.</description>
        <label>Org Level</label>
        <picklist>
            <picklistValues>
                <fullName>CustLevel01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustLevel02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustLevel03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustLevel04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustLevel05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustLevel06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustLevel07</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Payer_Role_Credit_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if the customer is credit blocked or not.</description>
        <label>Payer Role Credit Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Payer_Role_Credit_Rating__c</fullName>
        <description>Specifies the credit rating.</description>
        <label>Payer Role Credit Rating</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Payer_Role_Document_Transaction_Type__c</fullName>
        <description>Specifies how to handle a Orders (e.g. delivery order) regarding payments.</description>
        <label>Document Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>CashInvoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CreditInvoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ValuatedDeliveryNote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NonValuatedDeliveryNote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Payer_Role_Overall_Credit_Limit__c</fullName>
        <description>Specifies the overall credit limit for the customer.</description>
        <label>Payer Role Overall Credit Limit</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Payer_Role_Valid_From__c</fullName>
        <label>Payer Role Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Payer_Role_Valid_Thru__c</fullName>
        <label>Payer Role Valid Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Phase__c</fullName>
        <description>Describes in which systems the record is stored and which system has the priority: 
- only ERP (cannot occur) 
- priority ERP, exists in CRM 
- exist in ERP, priority CRM 
- only CRM</description>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Priority__c</fullName>
        <description>Classification of a company.</description>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>A - Priority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B - Priority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C - Priority</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Promotion_Valid_From__c</fullName>
        <description>begin of the validity period of the role &quot;promotion&quot;</description>
        <label>Promotion Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Promotion_Valid_Thru__c</fullName>
        <description>end of the validity period of the role &quot;promotion&quot;</description>
        <label>Promotion Valid Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.ACCL__RECORD_LINK, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Relevant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes, whether the account can be used for sales activities. This attribute controls nothing, just for information.</description>
        <label>Sales Relevant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__State__c</fullName>
        <description>Status of the account. Controls nothing, just information. Business partner roles are used for controlling instead.</description>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>090</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Store_Role_Valid_From__c</fullName>
        <label>Store Role Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Store_Role_Valid_Thru__c</fullName>
        <label>Store Role Valid Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Tax_Jurisdiction_Code__c</fullName>
        <description>Describes where the taxes have to be paid.</description>
        <label>Tax Jurisdiction Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UL_Currency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UL_Customet_Type__c</fullName>
        <label>Customet Type</label>
        <picklist>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UL_Direct_Indirect_Flag__c</fullName>
        <label>Direct/Indirect Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UL_NCF_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCF Flag</label>
        <type>Checkbox</type>
    </fields>
    <label>Customer Extension</label>
    <nameField>
        <displayFormat>AEX-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Extensions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACCL__Bill_To_Role_Timeframe</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
OR( 
AND( 
ISBLANK(ACCL__Bill_To_Role_Valid_From__c), 
ISBLANK(ACCL__Bill_To_Role_Valid_Thru__c)), 
AND( 
NOT ISBLANK(ACCL__Bill_To_Role_Valid_From__c), 
NOT ISBLANK(ACCL__Bill_To_Role_Valid_Thru__c), 
ACCL__Bill_To_Role_Valid_From__c&lt;= ACCL__Bill_To_Role_Valid_Thru__c)))</errorConditionFormula>
        <errorMessage>If the Role &quot;Bill To&quot; is assigned to the customer, then Valid From and Valid Thru must be specified and Valid Thru must be equal or later than Valid From.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Broker_Role_Timeframe</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
OR( 
AND( 
ISBLANK(ACCL__Broker_Role_Valid_From__c), 
ISBLANK(ACCL__Broker_Role_Valid_Thru__c)), 
AND( 
NOT ISBLANK(ACCL__Broker_Role_Valid_From__c), 
NOT ISBLANK(ACCL__Broker_Role_Valid_Thru__c), 
ACCL__Broker_Role_Valid_From__c&lt;= ACCL__Broker_Role_Valid_Thru__c)))</errorConditionFormula>
        <errorMessage>If the Role &quot;Broker&quot; is assigned to the customer, then Valid From and Valid Thru must be specified and Valid Thru must be equal or later than Valid From.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Customer_Role_Timeframe</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
OR( 
AND( 
ISBLANK(ACCL__Customer_Role_Valid_From__c), 
ISBLANK(ACCL__Customer_Role_Valid_Thru__c)), 
AND( 
NOT ISBLANK(ACCL__Customer_Role_Valid_From__c), 
NOT ISBLANK(ACCL__Customer_Role_Valid_Thru__c), 
ACCL__Customer_Role_Valid_From__c&lt;= ACCL__Customer_Role_Valid_Thru__c)))</errorConditionFormula>
        <errorMessage>If the Role &quot;Customer &quot; is assigned to the customer, then Valid From and Valid Thru must be specified and Valid Thru must be equal or later than Valid From.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Delivery_Role_Timeframe</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
OR( 
AND( 
ISBLANK(ACCL__Delivery_Role_Valid_From__c), 
ISBLANK(ACCL__Delivery_Role_Valid_Thru__c)), 
AND( 
NOT ISBLANK(ACCL__Delivery_Role_Valid_From__c), 
NOT ISBLANK(ACCL__Delivery_Role_Valid_Thru__c), 
ACCL__Delivery_Role_Valid_From__c&lt;= ACCL__Delivery_Role_Valid_Thru__c)))</errorConditionFormula>
        <errorMessage>If the Role &quot;Delivery &quot; is assigned to the customer, then Valid From and Valid Thru must be specified and Valid Thru must be equal or later than Valid From.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Fund_Role_Timeframe</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
        OR(
        AND(
        ISBLANK(ACCL__Fund_Role_Valid_From__c),
        ISBLANK(ACCL__Fund_Role_Valid_Thru__c)),
        AND(
        NOT ISBLANK(ACCL__Fund_Role_Valid_From__c),
        NOT ISBLANK(ACCL__Fund_Role_Valid_Thru__c),
        ACCL__Fund_Role_Valid_From__c&lt;= ACCL__Fund_Role_Valid_Thru__c)))</errorConditionFormula>
        <errorMessage>If the Role &quot;Fund &quot; is assigned to the customer, then Valid From and Valid Thru must be specified and Valid Thru must be equal or later than Valid From.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Order_Role_Timeframe</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
OR( 
AND( 
ISBLANK(ACCL__Order_Role_Valid_From__c), 
ISBLANK(ACCL__Order_Role_Valid_Thru__c)), 
AND( 
NOT ISBLANK(ACCL__Order_Role_Valid_From__c), 
NOT ISBLANK(ACCL__Order_Role_Valid_Thru__c), 
ACCL__Order_Role_Valid_From__c&lt;= ACCL__Order_Role_Valid_Thru__c)))</errorConditionFormula>
        <errorMessage>If the Role &quot;Order &quot; is assigned to the customer, then Valid From and Valid Thru must be specified and Valid Thru must be equal or later than Valid From.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Payer_Role_Timeframe</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
OR( 
AND( 
ISBLANK(ACCL__Payer_Role_Valid_From__c), 
ISBLANK(ACCL__Payer_Role_Valid_Thru__c)), 
AND( 
NOT ISBLANK(ACCL__Payer_Role_Valid_From__c), 
NOT ISBLANK(ACCL__Payer_Role_Valid_Thru__c), 
ACCL__Payer_Role_Valid_From__c&lt;= ACCL__Payer_Role_Valid_Thru__c)))</errorConditionFormula>
        <errorMessage>If the Role &quot;Payer &quot; is assigned to the customer, then Valid From and Valid Thru must be specified and Valid Thru must be equal or later than Valid From.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Promotion_Timeframe</fullName>
        <active>true</active>
        <description>Validates that Promotion Valid From and Promotion Valid Thru both or none are filled.
If both are filled, validates that Promotion Valid From &lt;= Promotion Valid Thru</description>
        <errorConditionFormula>NOT(
  OR(
    AND(
      ISBLANK(ACCL__Promotion_Valid_From__c),
      ISBLANK(ACCL__Promotion_Valid_Thru__c)),
    AND(
      NOT ISBLANK(ACCL__Promotion_Valid_From__c),
      NOT ISBLANK(ACCL__Promotion_Valid_Thru__c),
      ACCL__Promotion_Valid_From__c &lt;= ACCL__Promotion_Valid_Thru__c)))</errorConditionFormula>
        <errorMessage>If the Role &quot;Promotion&quot; is assigned to the customer, then Valid From and Valid Thru must be specified and Valid Thru must be equal or later than Valid From.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Store_Role_Timeframe</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
OR( 
AND( 
ISBLANK(ACCL__Store_Role_Valid_From__c), 
ISBLANK(ACCL__Store_Role_Valid_Thru__c)), 
AND( 
NOT ISBLANK(ACCL__Store_Role_Valid_From__c), 
NOT ISBLANK(ACCL__Store_Role_Valid_Thru__c), 
ACCL__Store_Role_Valid_From__c&lt;= ACCL__Store_Role_Valid_Thru__c)))</errorConditionFormula>
        <errorMessage>If the Role &quot;Store&quot; is assigned to the customer, then Valid From and Valid Thru must be specified and Valid Thru must be equal or later than Valid From.</errorMessage>
    </validationRules>
</CustomObject>